--- a/contactenos.html
+++ b/contactenos.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <section>
-            <h2>INSCRIBITE!!</h2>
+            <h2>INSCRIBETE!!</h2>
             <h3>y recibe grandes descuentos</h3>
 
             <div class="formulario">            
