--- a/servicios.html
+++ b/servicios.html
@@ -6,12 +6,13 @@
     <link rel="shortcut icon" href="images/chicken.ico" type="image/x-icon">
     <title>SUPERCHICKEN</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="images/restaurant-logo.jpg" alt="Descargado de Google">
+            <a href="index.html"><img src="images/restaurant-logo.jpg" alt="Descargado de Google"></a>
         </div>
         <div class="titulo">
             <h1>SUPERCHICKEN</h1>
@@ -25,25 +26,52 @@
     </header>
     <main>
         <section>
+            
             <h2>NUESTRO SERVICIOS</h2>
             <br>
             <h4>FESTEJA CON NOSOTROS</h4>
             <img src="images/restaurante.jpg" alt="Auto de pexels" width="600px" title="auto"> </a>
+            <p>nos especializamos en crear experiencias únicas para tus celebraciones. Ya sea un cumpleaños, aniversario, reunión familiar o evento especial, estamos aquí para hacer que cada momento sea memorable.</p>
+            <p>Haz tu reserva hoy y deja que SUPERCHICKEN transforme tu celebración en un evento extraordinario!</p>
             <br> 
             <br>
-             <h4>DOMICILIOS</h4>
-                 <img src="images/delivery2.avif"Auto de pexels" width="600px" title="auto" ></a>
+            <h4>DOMICILIOS</h4>
+            <p>En SUPERCHICKEN, llevamos la experiencia gastronómica directamente a la puerta de tu hogar. Nuestro servicio de entrega a domicilio está diseñado para que disfrutes de tus platos favoritos sin moverte de casa. La comodidad y la calidad son nuestra prioridad, asegurándonos de que cada entrega llegue a tiempo y en perfectas condiciones.</p>
+                <img src="images/delivery2.avif"Auto de pexels" width="600px" title="auto" ></a>
+                <br>
+
+                <section>
+                    <h3>Ingresa tu dirección</h3>
+                    <h4>Y llevamos tu pedido en poco tiempo.</h4>
+                    <div class="formulario">            
+                    <form action="" autocomplete="off">
+                        <label for="ldir">Dirección: </label>
+                        <input type="text" name="Dir" id="ldir" maxlength="20" placeholder="Ej: Carrera 11 # 12-13">
+                        <br>              
+                        <br>
+                        <label for="lcel">Celular:</label>
+                        <input type="tel" name="movil" id="lcel" maxlength="10" pattern="[o-9]{10}" placeholder="Ingresar 10 digitos">
+                        <br>
+                        <br>
+                        <div class="centrar">
+                            <button type="Enviar" class="btn btn-primary">Enviar</button>
+                            </div>
+                    </div>
+                        <br>
+                        </section>
+
                 <br> 
                 <hr>   
             </section> 
     </main>
     <br>
     <footer>
-        <div class="footer1">
-            <a href="https://web.whatsapp.com/" target="_blank"><img src="images/whatsapp.ico" alt="whatsapp"></a>
-            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.ico" alt="facebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.ico" alt="instagram"></a>
-            <a href="https://www.snapchat.com/es" target="_blank"><img src="images/Snap.ico"alt="snapchat"></a>
+        <div class="footer1"> 
+            <a href="https://web.whatsapp.com/" target="_blank"> <img src="images/whatsapp.ico" alt="whatsapp" style="width: 50px; height: 50px;"></a> 
+            <a href="https://www.facebook.com/" target="_blank"> <img src="images/facebook.ico" alt="facebook" style="width: 50px; height: 50px;"> </a> 
+            <a href="https://www.instagram.com/" target="_blank"> <img src="images/instagram.ico" alt="instagram" style="width: 50px; height: 50px;"> </a> 
+            <a href="https://www.snapchat.com/es" target="_blank"> <img src="images/Snap.ico" alt="snapchat" style="width: 70px; height: 70px;"> </a> 
+        </div> 
        <div class="footer2">
             <p>Todos los derechos reservados &copy;</p>
       </div>
